--- a/ng2-talk/package.json
+++ b/ng2-talk/package.json
@@ -11,7 +11,9 @@
     "core-decorators": "^0.12.0",
     "es6-promise": "^3.1.2",
     "isomorphic-fetch": "^2.2.0",
+    "normalize.css": "^4.1.1",
     "object-assign": "^4.0.1",
+    "prismjs": "^1.5.1",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "spectacle": "^1.0.7"
@@ -40,6 +42,7 @@
     "less-loader": "^2.2.3",
     "node-http-proxy": "^0.2.3",
     "path": "^0.12.7",
+    "raw-loader": "^0.5.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.0",
